--- a/cosigner/hosts.ini
+++ b/cosigner/hosts.ini
@@ -3,3 +3,9 @@
 
 ; [signer]
 ; 49.13.135.12 ansible_connection=root
+
+[signer]
+192.168.10.232 ansible_user=deq ansible_password=deq@123 ansible_connection=ssh 
+
+; [full_node]
+; 192.168.24.58 ansible_user=deqode  ansible_connection=ssh 
