--- a/cosigner/horcrux.yml
+++ b/cosigner/horcrux.yml
@@ -1,74 +1,299 @@
 ---
-- name: Setup Horcrux and Split Validator Key
-  hosts: all
+- name: Install and configure Horcrux signer
+  hosts: all  # Replace with your target host group or IP
   become: true
-  vars:
-    horcrux_url: "https://api.github.com/repos/jesseduffield/horcrux/releases/latest"
-    validator_key_path: "/tmp/validator.key"
-    horcrux_dir: "/usr/local/bin"
-    split_threshold: 3
-    num_cosigners: 5
   tasks:
-    - name: Install dependencies (jq and curl)
-      apt:
-        name:
-          - jq
-          - curl
-        state: present
-        update_cache: yes
-
-    - name: Download and install Horcrux
-      shell: |
-        curl -s "{{ horcrux_url }}" | \
-        jq -r '.assets[] | select(.browser_download_url | endswith("_Linux_x86_64.tar.gz")) | .browser_download_url' | \
-        xargs curl -Lo /tmp/horcrux.tar.gz && \
-        tar xfz /tmp/horcrux.tar.gz -C /tmp && \
-        rm /tmp/horcrux.tar.gz && \
-        mv /tmp/horcrux "{{ horcrux_dir }}"
-      args:
-        creates: "{{ horcrux_dir }}/horcrux"
-      notify:
-        - Ensure horcrux is executable
-
-    - name: Ensure Horcrux is executable
+    
+    - name: Create Horcrux directory
       file:
-        path: "{{ horcrux_dir }}/horcrux"
+        path: /home/Desktop/Horcrux
+        state: directory
+    
+    - name: Download Horcrux binary
+      get_url:
+        url: https://github.com/strangelove-ventures/horcrux/releases/download/v3.3.1/horcrux_linux-amd64
+        dest: /home/Desktop/Horcrux/horcrux_linux-amd64
         mode: '0755'
-        owner: root
-        group: root
 
-    - name: Copy Validator Key to Co-Signer
+    - name: Rename horcrux binary to horcrux
+      command:
+        cmd: mv /home/Desktop/Horcrux/horcrux_linux-amd64 /home/Desktop/Horcrux/horcrux
+
+    - name: Copy horcrux to /usr/bin
       copy:
-        src: "{{ validator_key_path }}"
-        dest: /tmp/validator.key
-        mode: '0600'
+        src: /home/Desktop/Horcrux/horcrux
+        dest: /usr/bin/horcrux
+        mode: '0755'
 
-    - name: Change permissions of the validator key
-      file:
-        path: /tmp/validator.key
-        owner: "{{ ansible_user | default('root') }}"
-        group: "{{ ansible_group | default('root') }}"
+    - name: Copy horcrux to /usr/local/sbin
+      copy:
+        src: /home/Desktop/Horcrux/horcrux
+        dest: /usr/local/sbin/horcrux
+        mode: '0755'
+
+    - name: Create horcrux service file
+      copy:
+        dest: /etc/systemd/system/horcrux.service
+        content: |
+          [Unit]
+          Description=horcrux Signer For Namada
+          After=network.target
+
+          [Service]
+          Type=simple
+          User=home
+          WorkingDirectory=/home/Desktop/Horcrux
+          ExecStart=/usr/bin/horcrux start --home /home/Desktop/Horcrux
+          Restart=on-failure
+          RestartSec=3
+          LimitNOFILE=4096
+
+          [Install]
+          WantedBy=multi-user.target
         mode: '0644'
 
-    - name: Split the Validator Key
-      shell: |
-        cd /tmp && \
-         horcrux -t 3 -n 5 split validator.key
+    - name: Reload systemd to apply changes
+      command: systemctl daemon-reload
+
+    - name: Enable horcrux service
+      systemd:
+        name: horcrux.service
+        enabled: true
+
+    - name: Start horcrux service
+      systemd:
+        name: horcrux.service
+        state: started
+    # New task to initialize Horcrux cluster configuration
+    - name: Initialize Horcrux cluster configuration
+      command: >
+        /usr/bin/horcrux config init
+        --node "tcp://10.168.0.1:1234"
+        --cosigner "tcp://10.168.1.1:12341"
+        --cosigner "tcp://10.168.1.2:12342"
+        --cosigner "tcp://10.168.1.3:12343"
+        --cosigner "tcp://10.168.1.4:12344"
+        --cosigner "tcp://10.168.1.5:12345"
+        --threshold 3
+        --grpc-timeout 1000ms
+        --raft-timeout 1000ms
+        -o
       args:
-        chdir: /tmp
-      register: split_output
-      failed_when: "'usage:' in split_output.stderr or split_output.rc != 0"
+        chdir: /home/Desktop/Horcrux
 
-    - name: Distribute Key Fragments
-      fetch:
-        src: "/tmp/validator_{{ item }}_of_{{ num_cosigners }}.horcrux"
-        dest: "./fragments/"
-      with_sequence: start=1 end="{{ num_cosigners }}"
-
-  handlers:
-    - name: Ensure horcrux is executable
+    # New task to create parent config directory
+    - name: Create parent config directory
       file:
-        path: "{{ horcrux_dir }}/horcrux"
-        mode: '0755'
-        owner: root
-        group: root
+        path: /home/deq/Desktop/Horcrux/config
+        state: directory
+
+    # New task to copy key file from local machine to remote machine
+    - name: Copy priv_validator_key.json from local to remote
+      copy:
+        src: /home/deq/Desktop/Horcrux/config/priv_validator_key.json  # Path to the file on your local machine
+        dest: /home/deq/Desktop/Horcrux/config/priv_validator_key.json  # Destination path on the remote machine
+        mode: '0644'
+
+    - name: Create parent config directory and set full permissions recursively
+      file:
+        path: /home/deq/Desktop/Horcrux/shards/
+        state: directory
+
+    - name: Run Horcrux command to create ED25519 shards
+      command: >
+        horcrux create-ed25519-shards
+        --chain-id "grand-1"
+        --key-file /home/deq/Desktop/Horcrux/config/priv_validator_key.json
+        --out /home/deq/Desktop/Horcrux/shards/
+        --threshold 3
+        --shards 5
+      become: true
+      args:
+        chdir: /home/deq/Desktop/Horcrux
+
+    - name: Run Horcrux create-ecies-shards command
+      command: >
+        horcrux create-ecies-shards
+        --out /home/deq/Desktop/Horcrux/shards/
+        --shards 5
+      args:
+        chdir: /home/deq/Desktop/Horcrux  # Ensure the command runs in the correct directory
+
+    - name: Write config content to cosigner_1/config.yaml
+      copy:
+        content: |
+          signMode: threshold
+          thresholdMode:
+            threshold: 3
+            cosigners:
+            - shardID: 1
+              p2pAddr: tcp://10.168.1.1:12341
+            - shardID: 2
+              p2pAddr: tcp://10.168.1.2:12342
+            - shardID: 3
+              p2pAddr: tcp://10.168.1.3:12343
+            - shardID: 4
+              p2pAddr: tcp://10.168.1.4:12344
+            - shardID: 5
+              p2pAddr: tcp://10.168.1.5:12345
+            grpcTimeout: 1000ms
+            raftTimeout: 1000ms
+          rpc:
+            listen_address: "tcp://0.0.0.0:12341"
+          chainNodes:
+          - privValAddr: tcp://10.168.0.1:1234
+          debugAddr: ""
+          grpcAddr: ""
+          maxReadSize: 1048576
+        dest: "/home/deq/Desktop/Horcrux/shards/cosigner_1/config.yaml"
+        mode: '0644'
+
+    - name: Write config content to cosigner_2/config.yaml
+      copy:
+        content: |
+          signMode: threshold
+          thresholdMode:
+            threshold: 3
+            cosigners:
+            - shardID: 1
+              p2pAddr: tcp://10.168.1.1:12341
+            - shardID: 2
+              p2pAddr: tcp://10.168.1.2:12342
+            - shardID: 3
+              p2pAddr: tcp://10.168.1.3:12343
+            - shardID: 4
+              p2pAddr: tcp://10.168.1.4:12344
+            - shardID: 5
+              p2pAddr: tcp://10.168.1.5:12345
+            grpcTimeout: 1000ms
+            raftTimeout: 1000ms
+          rpc:
+            listen_address: "tcp://0.0.0.0:12342"
+          chainNodes:
+          - privValAddr: tcp://10.168.0.1:1234
+          debugAddr: ""
+          grpcAddr: ""
+          maxReadSize: 1048576
+        dest: "/home/deq/Desktop/Horcrux/shards/cosigner_2/config.yaml"
+        mode: '0644'
+
+    - name: Write config content to cosigner_3/config.yaml
+      copy:
+        content: |
+          signMode: threshold
+          thresholdMode:
+            threshold: 3
+            cosigners:
+            - shardID: 1
+              p2pAddr: tcp://10.168.1.1:12341
+            - shardID: 2
+              p2pAddr: tcp://10.168.1.2:12342
+            - shardID: 3
+              p2pAddr: tcp://10.168.1.3:12343
+            - shardID: 4
+              p2pAddr: tcp://10.168.1.4:12344
+            - shardID: 5
+              p2pAddr: tcp://10.168.1.5:12345
+            grpcTimeout: 1000ms
+            raftTimeout: 1000ms
+          rpc:
+            listen_address: "tcp://0.0.0.0:12343"
+          chainNodes:
+          - privValAddr: tcp://10.168.0.1:1234
+          debugAddr: ""
+          grpcAddr: ""
+          maxReadSize: 1048576
+        dest: "/home/deq/Desktop/Horcrux/shards/cosigner_3/config.yaml"
+        mode: '0644'
+
+    - name: Write config content to cosigner_4/config.yaml
+      copy:
+        content: |
+          signMode: threshold
+          thresholdMode:
+            threshold: 3
+            cosigners:
+            - shardID: 1
+              p2pAddr: tcp://10.168.1.1:12341
+            - shardID: 2
+              p2pAddr: tcp://10.168.1.2:12342
+            - shardID: 3
+              p2pAddr: tcp://10.168.1.3:12343
+            - shardID: 4
+              p2pAddr: tcp://10.168.1.4:12344
+            - shardID: 5
+              p2pAddr: tcp://10.168.1.5:12345
+            grpcTimeout: 1000ms
+            raftTimeout: 1000ms
+          rpc:
+            listen_address: "tcp://0.0.0.0:12344"
+          chainNodes:
+          - privValAddr: tcp://10.168.0.1:1234
+          debugAddr: ""
+          grpcAddr: ""
+          maxReadSize: 1048576
+        dest: "/home/deq/Desktop/Horcrux/shards/cosigner_4/config.yaml"
+        mode: '0644'
+
+    - name: Write config content to cosigner_5/config.yaml
+      copy:
+        content: |
+          signMode: threshold
+          thresholdMode:
+            threshold: 3
+            cosigners:
+            - shardID: 1
+              p2pAddr: tcp://10.168.1.1:12341
+            - shardID: 2
+              p2pAddr: tcp://10.168.1.2:12342
+            - shardID: 3
+              p2pAddr: tcp://10.168.1.3:12343
+            - shardID: 4
+              p2pAddr: tcp://10.168.1.4:12344
+            - shardID: 5
+              p2pAddr: tcp://10.168.1.5:12345
+            grpcTimeout: 1000ms
+            raftTimeout: 1000ms
+          rpc:
+            listen_address: "tcp://0.0.0.0:12345"
+          chainNodes:
+          - privValAddr: tcp://10.168.0.1:1234
+          debugAddr: ""
+          grpcAddr: ""
+          maxReadSize: 1048576
+        dest: "/home/deq/Desktop/Horcrux/shards/cosigner_5/config.yaml"
+        mode: '0644'
+
+
+    - name: Copy Dockerfile content to /home/deq/Desktop/Horcrux/Dockerfile
+      copy:
+        content: |
+          # Base image
+          FROM ubuntu:22.04
+
+          # Install necessary tools
+          RUN apt-get update && apt-get install -y wget nano systemd curl
+
+          # Download and configure horcrux
+          RUN wget https://github.com/strangelove-ventures/horcrux/releases/download/v3.3.1/horcrux_linux-amd64 && \
+              mv horcrux_linux-amd64 horcrux && \
+              chmod +x horcrux && \
+              mv horcrux /usr/bin/horcrux && \
+              mkdir -p /usr/local/sbin && \
+              cp /usr/bin/horcrux /usr/local/sbin/horcrux
+
+          # Create horcrux directory
+          RUN mkdir -p /root/.horcrux
+
+          # Copy the cosigner configuration, keys, and shard files into the container
+
+          # Set the entrypoint to horcrux
+          ENTRYPOINT ["/usr/bin/horcrux"]
+        dest: /home/deq/Desktop/Horcrux/Dockerfile
+        mode: '0644'
+
+    - name: Run Docker Compose
+      ansible.builtin.shell:
+        cmd: docker-compose -f /home/deq/Desktop/Horcrux/docker-compose.yml up -d
+        chdir: /home/deq/Desktop/Horcrux
+        creates: /home/deq/Desktop/Horcrux/docker-compose.yml
